--- a/src/index.html
+++ b/src/index.html
@@ -39,17 +39,13 @@
   <link rel="manifest" href="manifest.webmanifest" />
   <meta name="theme-color" content="#40996b" />
 
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-647337EHZN"></script>
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-PFPKWDB975"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
-
-    function gtag() {
-      dataLayer.push(arguments);
-    }
+    function gtag(){dataLayer.push(arguments);}
     gtag('js', new Date());
-
-    gtag('config', 'G-647337EHZN');
-
+  
+    gtag('config', 'G-PFPKWDB975');
   </script>
 </head>
 
