--- a/src/index.html
+++ b/src/index.html
@@ -5,8 +5,7 @@
   <meta charset="utf-8" />
   <title>Qur'an Online Gratis | muslimlite.id</title>
   <base href="/" />
-  <meta name="viewport"
-    content="width=device-width, initial-scale=1, maximum-scale=1, viewport-fit=cover, user-scalable=no">
+  <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
   <meta name="facebook-domain-verification" content="v90czr4hfghhtqkku5xlip1xpi880r" />
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,400italic" />
   <link rel="icon" type="image/png" href="assets/favicon.png" />
@@ -14,7 +13,7 @@
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
 
   <meta name="title" content="Qur'an Online Gratis | muslimlite.id" />
-  <meta name="description" content="Qur'an Online Gratis | muslimlite.id" />
+  <meta name="description" content="Bacaan lengkap Al-Qur'an 30 Juz beserta terjemahan dan tafsir dari Kemenag, 💸 gratis sepenuhnya, 💫 tanpa iklan, 📈 tanpa analitik" />
   <meta name="keywords"
     content="muslimliteid, website, quran, quranonline, quranonlinegratis muslim, muslimlite, muslimliteapp" />
 
@@ -22,14 +21,14 @@
   <meta property="og:description"
     content="Bacaan lengkap Al-Qur'an 30 Juz beserta terjemahan dan tafsir dari Kemenag, 💸 gratis sepenuhnya, 💫 tanpa iklan, 📈 tanpa analitik" />
   <meta property="og:type" content="website" />
-  <meta property="og:image" content="https://muslimlite.id/assets/logo.png" />
+  <meta property="og:image" content="https://muslimlite.id/assets/muslimlite.png" />
   <meta property="og:url" content="https://muslimlite.id/" />
 
   <meta property="twitter:card" content="summary_large_image" />
   <meta property="twitter:title" content="Qur'an Online Gratis | muslimlite.id" />
   <meta property="twitter:description"
     content="Bacaan lengkap Al-Qur'an 30 Juz beserta terjemahan dan tafsir dari Kemenag, 💸 gratis sepenuhnya, 💫 tanpa iklan, 📈 tanpa analitik" />
-  <meta property="twitter:image" content="https://muslimlite.id/assets/logo.pngg" />
+  <meta property="twitter:image" content="https://muslimlite.id/assets/muslimlite.png" />
   <meta property="twitter:url" content="https://muslimlite.id/" />
 
   <meta content="canonical" />
@@ -38,15 +37,6 @@
 
   <link rel="manifest" href="manifest.webmanifest" />
   <meta name="theme-color" content="#40996b" />
-
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-PFPKWDB975"></script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
-    gtag('js', new Date());
-  
-    gtag('config', 'G-PFPKWDB975');
-  </script>
 </head>
 
 <body>
